# chess-ai

./: .gitignore  CMakeLists.txt  README.md
include/Core/: AI.hpp  BitOps.hpp  Bitboard.hpp  Board.hpp  Evaluation.hpp  Move.hpp  MoveGenerator.hpp
src/: main.cpp
src/Core/: AI.cpp  Bitboard.cpp  Board.cpp  Evaluation.cpp  Move.cpp  MoveGenerator.cpp
